Created and update

--- a/controleGlicemico.html
+++ b/controleGlicemico.html
@@ -45,10 +45,10 @@
 							<a href="index.html" class="nav-link">Home</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link">Calcular Idade Gestacional</a>
+							<a href="/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
 						</li>
 						<li class="nav-item">
-							<a href="controleGlicemico.html" class="nav-link">Controle Glicêmico</a>
+							<a href="#" class="nav-link">Controle Glicêmico</a>
 						</li>
 						<li class="nav-item">
 							<a href="#" class="btn btn-outline-light ml-4">Entrar</a>
@@ -66,14 +66,10 @@
 			<div class="row">
 				<div class="col-md-6 d-flex">
 					<div class="align-self-center">
-						<h2>Calcular Idade Gestacional</h2>
-						<form id="dumForm">
-							<div class="form-group">
-							  <label for="dumDate">Data da última menstruação (DUM)</label>
-							  <input type="date" class="form-control" id="dumDate" required>
-							</div>
-							<button type="button" class="btn btn-primary" onclick="calcularIdadeGestacional()">Calcular</button>
-						</form>
+						<h2>Controle Glicêmico</h2>
+						<div class="jumbotron">
+							<p class="display-4">Em construção</p>
+						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
