--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<a href="calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link">Benefícios</a>
+							<a href="controleGlicemico.html" class="nav-link">Controle Glicêmico</a>
 						</li>
 						<li class="nav-item">
 							<a href="#" class="btn btn-outline-light ml-4">Entrar</a>
@@ -105,12 +105,11 @@
 				</div>
 				<div class="col-md-6 d-flex">
 					<div class="align-self-center">
-						<h2>Pare de pagar Juros</h2>
+						<h2>Controle Glicêmico</h2>
 						<p>
-							Com o iMoney, você pode categorizar todos os seus lançamentos.
-							Com grafico simples, você sabe de onde vem e para onde vai o seu dinheiro
+							Durante a gestação, o controle glicêmico assume um papel crucial para a saúde da mãe e do bebê. Manter os níveis de glicose no sangue dentro dos parâmetros adequados é essencial para prevenir complicações associadas à diabetes gestacional.
 						</p>
-						<a href="" class="btn btn-primary">Veja Mais</a>
+						<a href="controleGlicemico.html" class="btn btn-primary">Calcular</a>
 					</div>
 				</div>
 			</div>
@@ -125,21 +124,23 @@
 					<img src="img/facil.png" class="img-fluid">
 					<h4>Fácil de Usar</h4>
 					<p>
-						O iMoney vai além do básico e permite que você faça controles incriveis, essenciais para suas finanças. Simples como tem que ser!
+						O Minha Gestação Meu Bebê oferece uma variedade de recursos para auxiliar nessa fase de forma fácil e descomplicada!
 					</p>
 				</div>
 				<div class="col-md-4">
 					<img src="img/economize.png" class="img-fluid">
 					<h4>Economize seu Tempo</h4>
 					<p>
-						O iMoney vai além do básico e permite que você faça controles incriveis, essenciais para suas finanças. Simples como tem que ser!
+						Economize tempo com o Minha Gestação Meu Bebê! Nossa plataforma oferece recursos que tornam tudo mais prático e eficiente para você acompanhar sua gestação e o desenvolvimento do seu bebê.
 					</p>
 				</div>
 				<div class="col-md-4">
 					<img src="img/suporte.png" class="img-fluid">
 					<h4>Suporte Amigo</h4>
 					<p>
-						O iMoney vai além do básico e permite que você faça controles incriveis, essenciais para suas finanças. Simples como tem que ser!
+						Suporte Amigo
+
+						Estamos em fase de construção e queremos oferecer a melhor experiência possível. Se tiver dúvidas sobre qualquer recurso, desejar fazer reclamações, reportar problemas ou enviar sugestões, fique à vontade para entrar em contato conosco por e-mail em leandrodepaula.ti@gmail.com. Sua opinião é muito importante para nós!
 					</p>
 				</div>
 			</div>
