--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 	<div id="footer"></div>
 
 	<!-- JavaScript -->
+	<script src="config.js"></script>
 	<script src="main.js"></script>
 	<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
