--- a/pages/calcularIdadeGestacional.html
+++ b/pages/calcularIdadeGestacional.html
@@ -52,6 +52,10 @@
 	</section><!-- Fim seção saiba -->
 
     <div id="footer"></div>
+	<script src="../config.js"></script>
+	<script>
+        BASE_PATH = '../';
+    </script>
 	<script src="../main.js"></script>
 	<script src="../apps/calcularIdadeGestacional.js"></script>
 
