--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 </head>
 
 <body>
-	<div id="header"><!-- Incio do cabeçalho -->
-	</div><!-- Fim do cabeçalho-->
+	<div id="header"></div>
 
 	<section class="home"><!-- Inicio seção home -->
 		<div class="container">
