--- a/pages/calcularIdadeGestacional.html
+++ b/pages/calcularIdadeGestacional.html
@@ -55,6 +55,7 @@
 	<script src="../config.js"></script>
 	<script>
         BASE_PATH = '../';
+		PAGE = true;
     </script>
 	<script src="../main.js"></script>
 	<script src="../apps/calcularIdadeGestacional.js"></script>
