--- a/pages/bodyHeader.html
+++ b/pages/bodyHeader.html
@@ -1,7 +1,7 @@
 <header class="home"><!-- Incio do cabeçalho -->
     <nav class="navbar navbar-expand-sm navbar-light "><!-- Barra de Navegação bg-warning-->
         <div class="container">
-            <a href="../index.html" class="navbar-brand">
+            <a id="index" href="../index.html" class="navbar-brand">
                 <img src="../assets/img/logo.png" width="274">
             </a>
 
@@ -15,7 +15,7 @@
                         <a href="../index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="pages/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
+                        <a id="calcularIdadeGestacional" href="pages/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
                     </li>
                     <li class="nav-item">
                         <a href="controleGlicemico.html" class="nav-link">Controle Glicêmico</a>
@@ -28,3 +28,4 @@
         </div>
     </nav><!-- Fim da Barra de Navegação -->
 </header><!-- Fim do cabeçalho-->
+<script src="page.js"></script>
