--- a/pages/bodyHeader.html
+++ b/pages/bodyHeader.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-sm navbar-light "><!-- Barra de Navegação bg-warning-->
         <div class="container">
             <a id="index" href="../index.html" class="navbar-brand">
-                <img src="../assets/img/logo.png" width="274">
+                <img id="logo" src="../assets/img/logo.png" width="274">
             </a>
 
             <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal" >
