--- a/pages/bodyHeader.html
+++ b/pages/bodyHeader.html
@@ -12,7 +12,7 @@
             <div class="collapse navbar-collapse" id="nav-principal">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="../index.html" class="nav-link">Home</a>
+                        <a id="home" href="../index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a id="calcularIdadeGestacional" href="pages/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
