--- a/pages/calcularIdadeGestacional.html
+++ b/pages/calcularIdadeGestacional.html
@@ -52,6 +52,8 @@
 	</section><!-- Fim seção saiba -->
 
     <div id="footer"></div>
+
+	<!-- JavaScript -->
 	<script src="../config.js"></script>
 	<script>
         BASE_PATH = '../';
@@ -60,9 +62,6 @@
 	<script src="../main.js"></script>
 	<script src="../apps/calcularIdadeGestacional.js"></script>
 
-
-
-	<!-- JavaScript (Opcional) -->
 	<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
