App - Controle Glicemico - Step 01

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<p>
 							Durante a gestação, o controle glicêmico assume um papel crucial para a saúde da mãe e do bebê. Manter os níveis de glicose no sangue dentro dos parâmetros adequados é essencial para prevenir complicações associadas à diabetes gestacional.
 						</p>
-						<a href="controleGlicemico.html" class="btn btn-primary">Calcular</a>
+						<a href="pages/controleGlicemico.html" class="btn btn-primary">Calcular</a>
 					</div>
 				</div>
 			</div>
