--- a/pages/bodyHeader.html
+++ b/pages/bodyHeader.html
@@ -18,7 +18,7 @@
                         <a id="calcularIdadeGestacional" href="pages/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
                     </li>
                     <li class="nav-item">
-                        <a href="controleGlicemico.html" class="nav-link">Controle Glicêmico</a>
+                        <a id="controleGlicemico" href="pages/controleGlicemico.html" class="nav-link">Controle Glicêmico</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="btn btn-outline-light ml-4">Entrar</a>
