--- a/pages/controleGlicemico.html
+++ b/pages/controleGlicemico.html
@@ -13,54 +13,23 @@
 	<title>Minha Gestação Meu Bebê</title>
 
 	<!-- Bootstrap Offgrid -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
 	<!-- Ionic CSS Offgrid -->
-	<link href="iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+	<link href="../assets/iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
 
 	<!-- FontAwesome Offgrid-->
-	<link href="fontawesome/css/all.css" rel="stylesheet">
+	<link href="../assets/fontawesome/css/all.css" rel="stylesheet">
 
 	<!-- Estilo customizado -->
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/estilo.css">
 
-	<link rel="icon"  href="img/favicon.png">
+	<link rel="icon"  href="../assets/img/favicon.png">
 </head>
 
 <body>
-	<header class="home"><!-- Incio do cabeçalho -->
-		<nav class="navbar navbar-expand-sm navbar-light "><!-- Barra de Navegação bg-warning-->
-			<div class="container">
-				<a href="index.html" class="navbar-brand">
-					<img src="img/logo.png" width="274">
-				</a>
-
-				<button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal" >
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="nav-principal">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a href="index.html" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="/calcularIdadeGestacional.html" class="nav-link">Calcular Idade Gestacional</a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">Controle Glicêmico</a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="btn btn-outline-light ml-4">Entrar</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav><!-- Fim da Barra de Navegação -->
-	</header><!-- Fim do cabeçalho-->
-
-
-
+	<div id="header"></div>
+	
 	<section class="caixa"><!--Inicio seção saiba  -->
 		<div class="container">
 			<div class="row">
@@ -79,102 +48,17 @@
 		</div>
 	</section><!-- Fim seção saiba -->
 
-	<footer class="mt-4 mb-4">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8">
-					<p>
-						<a href="">Home</a>
-						<a href="">Calcular Idade Gestaciona</a>
-						<a href="">Controle Glicêmico</a>
-					</p>
-				</div>
-				<div class="col-md-4 d-flex justify-content-end">
-					<a href="" class="btn btn-outline-dark">
-						<i class="fab fa-facebook-square"></i>
-					</a>
-					<a href="" class="btn btn-outline-dark ml-2">
-						<i class="fab fa-twitter-square"></i>
-					</a>
-					<a href="" class="btn btn-outline-dark ml-2">
-						<i class="fab fa-youtube"></i>
-					</a>
-					<a href="" class="btn btn-outline-dark ml-2">
-						<i class="fab fa-instagram"></i>
-					</a>
-				</div>
-			</div>
-		</div>
-	</footer>
+    <div id="footer"></div>
 
+	<!-- JavaScript -->
+	<script src="../config.js"></script>
 	<script>
-		function calcularIdadeGestacional() {
-		  // Obtém a data da DUM do campo de entrada
-		  const dumInput = document.getElementById('dumDate');
-		  const dumValue = dumInput.value;
+        BASE_PATH = '../';
+		PAGE = true;
+    </script>
+	<script src="../main.js"></script>
+	<script src="../apps/calcularIdadeGestacional.js"></script>
 
-		  // Faça aqui o cálculo desejado com a data da DUM
-		  // Por exemplo, a data estimada para o próximo período
-
-		  /*
-		   * Função que calcula a quantidade de semanas
-		   * Idade gestacional em semanas = (Data atual - DUM) / 7
-		   */
-		  let dataDUM = new Date(dumValue);
-          let dataAtual = new Date();
-
-          let diffTime = Math.abs(dataAtual - dataDUM);
-          let diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
-          let result = Math.floor(diffDays / 7);
-
-		  if (result >= 28) {
-				var text = '<h4 class="lead">Orientações para gravidez:</h4>' +
-						   '<p><b>Terceiro Trimestre (Da semana 28 até o parto):</b></p>'+
-						   '<ul>' +
-								'<li>Exames regulares: Continue com as consultas médicas regulares para acompanhar a saúde da gestante e do bebê.</li>' +
-								'<li>Repouso adequado: Descanse e evite posições desconfortáveis.</li>' +
-								'<li>Sinais de trabalho de parto: Esteja atenta aos sinais de trabalho de parto e saiba quando procurar assistência médica.</li>' +
-								'<li>Hidratação: Continue bebendo bastante água.</li>' +
-								'<li>Respiração e relaxamento: Pratique técnicas de respiração e relaxamento para o momento do parto.</li>' +
-							'</ul>' +
-							'<small>É importante lembrar que cada gestação é única, e é fundamental seguir as orientações do médico, que acompanhará de perto a saúde da gestante e do bebê ao longo de toda a gravidez.</small>'
-			} else if (result >= 13 && result <= 27){
-			    var text = '<h4 class="lead">Orientações para gravidez:</h4>' +
-						   '<p><b>Segundo Trimestre (Da semana 13 a 27):</b></p>'+
-						   '<ul>' +
-								'<li>Atividade física: Pratique exercícios leves e adequados para gestantes, como caminhadas ou natação.</li>' +
-								'<li>Roupas confortáveis: Use roupas confortáveis e que não restrinjam o crescimento da barriga.</li>' +
-								'<li>Monitoramento do ganho de peso: Mantenha um ganho de peso saudável, de acordo com as recomendações médicas.</li>' +
-								'<li>Cuidados com a pele: Hidrate a pele para prevenir estrias.</li>' +
-								'<li>Preparação para o parto: Considere frequentar aulas de preparação para o parto.</li>' +
-							'</ul>' +
-							'<small>É importante lembrar que cada gestação é única, e é fundamental seguir as orientações do médico, que acompanhará de perto a saúde da gestante e do bebê ao longo de toda a gravidez.</small>'
-
-		  } else if (result <= 12) {
-			    var text = '<h4 class="lead">Orientações para gravidez:</h4>' +
-						   '<p><b>Primeiro Trimestre (Da semana 1 a 12):</b></p>'+
-						   '<ul>' +
-								'<li>Consulta médica: Realize um exame pré-natal completo e siga todas as orientações do médico.</li>' +
-								'<li>Suplementação: Tome ácido fólico e outros suplementos recomendados pelo médico.</li>' +
-								'<li>Alimentação: Mantenha uma dieta equilibrada e evite alimentos não seguros para gestantes, como peixes com alto teor de mercúrio.</li>' +
-								'<li>Hidratação: Beba bastante água para evitar a desidratação.</li>' +
-								'<li>Descanso: Priorize o descanso e evite atividades extenuantes.</li>' +
-								'<li>Evite fumo e álcool: Elimine completamente o consumo de tabaco e álcool.</li>' +
-							'</ul>' +
-							'<small>É importante lembrar que cada gestação é única, e é fundamental seguir as orientações do médico, que acompanhará de perto a saúde da gestante e do bebê ao longo de toda a gravidez.</small>'
-		  }
-
-
-		  // Exibe o resultado no elemento de resultado
-		  const resultadoElement = document.getElementById('resultado');
-		  resultadoElement.innerHTML = `<h3 class="display-5">Total de Semanas: ${result}</h3><hr>${text}`;
-
-		}
-	</script>
-
-
-
-	<!-- JavaScript (Opcional) -->
 	<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
