App - Controle Glicemico - Step 02

--- a/pages/controleGlicemico.html
+++ b/pages/controleGlicemico.html
@@ -29,7 +29,7 @@
 
 <body>
 	<div id="header"></div>
-	
+
 	<section class="caixa"><!--Inicio seção saiba  -->
 		<div class="container">
 			<div class="row">
@@ -57,7 +57,7 @@
 		PAGE = true;
     </script>
 	<script src="../main.js"></script>
-	<script src="../apps/calcularIdadeGestacional.js"></script>
+	<script src="../apps/controleGlicemico.js"></script>
 
 	<!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
